--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,47 @@ body{
   width: 100vw;
   height: 100vh;
 }
+
+#root{
+  width: 100%;
+  height: 100%;
+  background-color: var(--cinza-medio);
+  overflow: scroll;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#root > div{
+  background-color: var(--cinza-claro);
+  border: 5px solid var(--laranja);
+  width: 676px;
+  height: 340px;
+  padding: 5px;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.fcc{
+  width: 100%;
+  text-align: right;
+}
+
+.fcc, .fcc i{
+  font-style: italic;
+  font-weight: bold;
+  font-size: 1.3rem;  
+}
+
+#drum-machine{
+  height: 300px;
+  width: 100%;
+  padding: 15px 10px;
+  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
